--- a/fly.toml
+++ b/fly.toml
@@ -8,16 +8,26 @@ primary_region = 'gig'
 
 [build]
 
+[env]
+  NODE_ENV = "production"
+  PORT = "3000"
+
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'suspend'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
+
+  [[http_service.checks]]
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '1s'
+    method = 'get'
+    path = '/'
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
